After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 724682 - menubutton in fullscreen mode makes the bar disappear
menubutton in fullscreen mode makes the bar disappear
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Gedit maintainers
Gedit maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-18 19:04 UTC by sébastien lafargue
Modified: 2014-07-04 10:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fullscreen mode: use an overlay + revealer for controls animation (34.77 KB, patch)
2014-02-18 19:06 UTC, sébastien lafargue
none Details | Review
fullscreen mode: use an overlay + revealer (36.46 KB, patch)
2014-02-18 20:29 UTC, sébastien lafargue
none Details | Review
fullscreen mode: use an overlay + revealer (35.43 KB, patch)
2014-02-18 21:47 UTC, sébastien lafargue
committed Details | Review

Description sébastien lafargue 2014-02-18 19:04:56 UTC
A rewrite of the fullscreen controls animation code
and several fix for bugs encountered
Comment 1 sébastien lafargue 2014-02-18 19:06:19 UTC
Created attachment 269595 [details] [review]
fullscreen mode: use an overlay + revealer for controls animation
Comment 2 sébastien lafargue 2014-02-18 19:08:21 UTC
bugs to fix in fullscreen mode :

- print dialog appear under the main window
- recent documents list don't work
- menu let the headerbar disappear when triggered
Comment 3 sébastien lafargue 2014-02-18 20:29:29 UTC
Created attachment 269615 [details] [review]
fullscreen mode: use an overlay + revealer
Comment 4 sébastien lafargue 2014-02-18 21:47:02 UTC
Created attachment 269627 [details] [review]
fullscreen mode: use an overlay + revealer
Comment 5 Paolo Borelli 2014-02-18 22:11:01 UTC
Comment on attachment 269627 [details] [review]
fullscreen mode: use an overlay + revealer

I love the smell of removed lines in the morning
Comment 6 sébastien lafargue 2014-02-19 15:31:28 UTC
Print dialog appear under the main window :

problem redirected to Gtk+ :

https://bugzilla.gnome.org/show_bug.cgi?id=724728
Comment 7 Paolo Borelli 2014-02-22 16:40:46 UTC
> - recent documents list don't work

this is fixed
Comment 8 Paolo Borelli 2014-04-12 09:00:49 UTC
Retitling since the other issues are fixed
Comment 9 sébastien lafargue 2014-07-04 10:56:19 UTC
> menu let the headerbar disappear when triggered

fixed in https://bugzilla.gnome.org/show_bug.cgi?id=731086

> Print dialog appear under the main window

fixed by gtk+ team