fullscreen mode: use an overlay + revealer

https://bugzilla.gnome.org/show_bug.cgi?id=724682